--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
       </tr>
       <tr>
         <td width="28%" style="text-align: left;">	
-          <span style="background-color: #fdcbcc;">&lt;clapping&gt;</span> he offered his hand to the baroness who descending <span style="background-color: #fdcbcc;">&lt;I&gt;</span> <span style="background-color: #fdcbcc;">&lt;/I&gt;</span> took it with a peculiarity of manner imperceptible to every one but monte cristo</td>
+          he offered his hand to the baroness who descending <span style="background-color: #fdcbcc;">&lt;clapping&gt;</span> <span style="background-color: #fdcbcc;">&lt;I&gt;</span> <span style="background-color: #fdcbcc;">&lt;/I&gt;</span> took it with a peculiarity of manner imperceptible to every one but monte cristo</td>
         <td width="28%" style="text-align: left;">A young female's speech is characterized by an even, steady delivery. Her voice carries a moderate pitch, and her pace is a comfortable, moderate speed, creating an overall impression of calm and measured articulation.</td>
         <td width="12%" style="text-align: center;"><audio controls="">
             <source src="static/audio_sample/capttssedb/i_237.wav"
@@ -396,7 +396,7 @@
 
       <tr>
         <td width="28%" style="text-align: left;">	
-          <span style="background-color: #fdcbcc;">&lt;keyboard_typing&gt;</span> loose indentures and harsh laws put them at the mercy of their masters <span style="background-color: #fdcbcc;">&lt;B&gt;</span> it would not be unfair <span style="background-color: #fdcbcc;">&lt;/B&gt;</span> to add that such was their lot in all other colonies</td>
+          loose indentures and harsh laws put them at the mercy of their masters <span style="background-color: #fdcbcc;">&lt;keyboard_typing&gt;</span> <span style="background-color: #fdcbcc;">&lt;B&gt;</span> it would not be unfair <span style="background-color: #fdcbcc;">&lt;/B&gt;</span> to add that such was their lot in all other colonies</td>
         <td width="28%" style="text-align: left;">A young adult male delivers his speech with a monotone, measured tone, maintaining a consistent rhythm. His moderate pitch, carries a sense of calm assurance.</td>
         <td width="12%" style="text-align: center;"><audio controls="">
             <source src="static/audio_sample/capttssedb/b_063.wav"
@@ -405,7 +405,7 @@
       </tr>
       <tr>
         <td width="28%" style="text-align: left;">	
-          <span style="background-color: #fdcbcc;">&lt;clapping&gt;</span> in the first chapter of his geography <span style="background-color: #fdcbcc;">&lt;B&gt;</span> moses tells us there were only two people in the world <span style="background-color: #fdcbcc;">&lt;/B&gt;</span></td>
+         in the first chapter of his geography <span style="background-color: #fdcbcc;">&lt;clapping&gt;</span> <span style="background-color: #fdcbcc;">&lt;B&gt;</span> moses tells us there were only two people in the world <span style="background-color: #fdcbcc;">&lt;/B&gt;</span></td>
         <td width="28%" style="text-align: left;">In a moderately paced and subdued manner, a middle-aged man delivers his speech with a slightly low-pitched, monotone tone, presenting an understated yet deliberate air.</td>
         <td width="12%" style="text-align: center;"><audio controls="">
             <source src="static/audio_sample/capttssedb/b_097.wav"
@@ -659,7 +659,7 @@
           </audio></td>
       </tr>
       <tr>
-        <td width="28%" style="text-align: left;"><span style="background-color: #fdcbcc;">&lt;coughing&gt;</span> it did not beckon or indeed move at all <span style="background-color: #fdcbcc;">&lt;I&gt; &lt;/I&gt;</span> it was as still as the hand of death
+        <td width="28%" style="text-align: left;"> it did not beckon or indeed move at all <span style="background-color: #fdcbcc;">&lt;coughing&gt;</span> <span style="background-color: #fdcbcc;">&lt;I&gt; &lt;/I&gt;</span> it was as still as the hand of death
         </td>
         <td width="28%" style="text-align: left;">A middle-aged man delivers his words in a monotone manner, maintaining a steady, moderate pace. His slightly elevated pitch, while not overly dramatic, imparts a subtle sense of gravity to his speech.</td>
         <td width="12%" style="text-align: center;"><audio controls="">
@@ -672,7 +672,7 @@
           </audio></td>
       </tr>
       <tr>
-        <td width="28%" style="text-align: left;"><span style="background-color: #fdcbcc;">&lt;dog&gt;</span> at this moment miss brandon entered with her brilliant cousin rachel the blonde and the dark it was a dazzling contrast <span style="background-color: #fdcbcc;">&lt;I&gt; &lt;/I&gt;</span> </td>
+        <td width="28%" style="text-align: left;"> at this moment miss brandon entered with her brilliant cousin rachel the blonde and the dark it was a dazzling contrast <span style="background-color: #fdcbcc;">&lt;dog&gt;</span> <span style="background-color: #fdcbcc;">&lt;I&gt; &lt;/I&gt;</span> </td>
         <td width="28%" style="text-align: left;">A young woman speaks at a moderate pace, her voice carrying a hint of monotone. Remarkably, she maintains a high pitch, giving her speech an air of focused determination.</td>
         <td width="12%" style="text-align: center;"><audio controls="">
             <source src="static/audio_sample/capttsse/dog_ar.wav"
@@ -696,7 +696,7 @@
           </audio></td>
       </tr>
       <tr>
-        <td width="28%" style="text-align: left;"><span style="background-color: #fdcbcc;">&lt;clapping&gt;</span> i know said margaret bolton with a half anxious smile <span style="background-color: #fdcbcc;">&lt;B&gt;</span> the chafes against all the ways of friends <span style="background-color: #fdcbcc;">&lt;/B&gt;</span> but what will thee do
+        <td width="28%" style="text-align: left;"> i know said margaret bolton with a half anxious smile <span style="background-color: #fdcbcc;">&lt;clapping&gt;</span> <span style="background-color: #fdcbcc;">&lt;B&gt;</span> the chafes against all the ways of friends <span style="background-color: #fdcbcc;">&lt;/B&gt;</span> but what will thee do
         </td>
         <td width="28%" style="text-align: left;">An old female speaker, her voice subtly animated, adopts a slightly low pitch. Her speech pace is moderate.</td>
         <td width="12%" style="text-align: center;"><audio controls="">
