--- a/index.html
+++ b/index.html
@@ -221,6 +221,8 @@
         <h2 class="title is-3">Table of Contents</h2>
         <div class="is-centered">
           <ul>
+            <li><a href="#capspeechpt"><b>CapSpeech-PT DataSet</b></a></li>
+            <li><a href="#capspeechptsedb"><b>CapSpeech-PT-SEDB DataSet</b></a></li>
             <li><a href="#agentdb"><b>CapSpeech-AgentDB DataSet</b></a></li>
             <li><a href="#capttssedb"><b>CapSpeech-SEDB DataSet</b></a></li>
             <li><a href="#captts"><b>CapTTS Results</b></a></li>
@@ -234,6 +236,188 @@
       </div>
     </div>
 
+  </div>
+</section>
+
+<section id="capspeechpt" class="hero">
+  <div class="hero-body">
+    <div class="container is-fluid">
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <h2 class="title is-3">CapSpeech-PT DataSet</h2>
+          <div class="content">
+            <p>Audio Samples</p>
+          </div>
+        </div>
+      </div>
+      <div class="columns is-centered has-text-centered">
+        <table class="table" style="background-color: transparent; width: 100%; border-collapse: collapse;">
+          <thead>
+            <tr style="text-align: center;">
+              <th>
+                <strong>
+                  <span class="icon">
+                    <i class="fas fa-book"></i>
+                  </span>
+                  Transcription
+                </strong>
+              </th>
+              <th><strong>
+                <span class="icon">
+                  <i class="fas fa-user"></i>
+                </span>
+                  Caption
+              </strong></th>
+              <th>
+                <strong>
+                  <span class="icon" style="color: #384e41;">
+                    <i class="fas fa-headphones"></i>
+                  </span>
+                  Audio Recording
+                </strong>
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+        <tr>
+          <td width="28%" style="text-align: left;">So what happens is when you click on suggest page and you choose</td>
+          <td width="28%" style="text-align: left;">A middle-aged woman delivers her speech with a subtle expressiveness, her voice deep and resonant due to its low pitch. Her pace is unhurried, lending an air of thoughtfulness and deliberation to her tone.</td>
+          <td width="12%" style="text-align: center;"><audio controls="">
+              <source src="static/audio_sample/capspeech-pt/YOU0000004420_S0000018.wav"
+                type="audio/wav">
+            </audio></td>
+        </tr>
+      <tr>
+        <td width="28%" style="text-align: left;">This adventure of ours was destined to differ in one respect from others which i have narrated.</td>
+        <td width="28%" style="text-align: left;">In a somber, unwavering tone, a middle-aged man delivers his words with a low pitch, his steady pace slightly accelerating, yet maintaining a sense of controlled cadence.</td>
+        <td width="12%" style="text-align: center;"><audio controls="">
+            <source src="static/audio_sample/capspeech-pt/AUD0000001417_S0002797.wav"
+              type="audio/wav">
+          </audio></td>
+      </tr>
+      <tr>
+        <td width="28%" style="text-align: left;"> But it really seems like they skipped a whole bunch of stuff and went straight to the trial.Notwithstanding, louis should probably be talking to the jury, if there is a jury present at this time, and not to the judge.</td>
+        <td width="28%" style="text-align: left;">A young adult male speaks with dynamic inflection and a brisk, energetic pace. His slightly high pitch lends a sense of urgency and concentration to his delivery.</td>
+        <td width="12%" style="text-align: center;"><audio controls="">
+            <source src="static/audio_sample/capspeech-pt/YOU0000005348_S0000053.wav"
+              type="audio/wav">
+          </audio></td>
+      </tr>
+      <tr>
+        <td width="28%" style="text-align: left;">It immediately triggered a deep sense of sadness and grieving.And my phone lit up with people who are sobbing,</td>
+        <td width="28%" style="text-align: left;">In a room with minimal background noise and reverberation, an elderly man delivers his speech in a monotone manner, his slightly high-pitched voice resonating with a sense of calm and wisdom. His pace is measured, with a slight slowness that allows his words to echo with depth and significance.</td>
+        <td width="12%" style="text-align: center;"><audio controls="">
+            <source src="static/audio_sample/capspeech-pt/YOU0000017887_S0000341.wav"
+              type="audio/wav">
+          </audio></td>
+      </tr>
+      <tr>
+        <td width="28%" style="text-align: left;">So youve got a number of options, so what it does, it works in this idea of creating a graph projection.</td>
+        <td width="28%" style="text-align: left;">The speech emanates from a young adult woman, her voice, a melodious symphony of high-pitched exuberance. Her words flow rapidly, each syllable a testament to her animated spirit, imbued with a subtly expressive tone.</td>
+        <td width="12%" style="text-align: center;"><audio controls="">
+            <source src="static/audio_sample/capspeech-pt/YOU0000001726_S0000247.wav"
+              type="audio/wav">
+          </audio></td>
+      </tr>
+
+            </tbody>
+        </table>
+      </div>
+              <div class="columns is-centered has-text-centered">
+                <div class="column is-four-fifths">
+                  <a href="#toc" class="button is-primary">Go Back to Table of Contents</a>
+                </div>
+              </div>
+    </div>
+  </div>
+</section>
+
+<section id="capspeechptsedb" class="hero">
+  <div class="hero-body">
+    <div class="container is-fluid">
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <h2 class="title is-3">CapSpeech-PT-SEDB DataSet</h2>
+          <div class="content">
+            <p>Audio Samples</p>
+          </div>
+        </div>
+      </div>
+      <div class="columns is-centered has-text-centered">
+        <table class="table" style="background-color: transparent; width: 100%; border-collapse: collapse;">
+          <thead>
+            <tr style="text-align: center;">
+              <th>
+                <strong>
+                  <span class="icon">
+                    <i class="fas fa-book"></i>
+                  </span>
+                  Transcription
+                </strong>
+              </th>
+              <th><strong>
+                <span class="icon">
+                  <i class="fas fa-user"></i>
+                </span>
+                  Caption
+              </strong></th>
+              <th>
+                <strong>
+                  <span class="icon" style="color: #384e41;">
+                    <i class="fas fa-headphones"></i>
+                  </span>
+                  Audio Recording
+                </strong>
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+      <tr>
+        <td width="28%" style="text-align: left;">	
+          montmorency made up his mind to defend on the whole coast of provence only marseilles <span style="background-color: #fdcbcc;">&lt;knock&gt;</span> <span style="background-color: #fdcbcc;">&lt;I&gt;</span> <span style="background-color: #fdcbcc;">&lt;/I&gt;</span> and arles he pulled down the ramparts of the other towns which were left exposed to the enemy</td>
+        <td width="28%" style="text-align: left;">A young adult male delivers his speech with a monotone, measured tone, maintaining a consistent rhythm. His moderate pitch, carries a sense of calm assurance.</td>
+        <td width="12%" style="text-align: center;"><audio controls="">
+            <source src="static/audio_sample/capspeech-pt-sedb/6599_38591_000001_000008_01.wav"
+              type="audio/wav">
+          </audio></td>
+      </tr>
+      <tr>
+        <td width="28%" style="text-align: left;">	
+          <span style="background-color: #fdcbcc;">&lt;applause&gt;</span> <span style="background-color: #fdcbcc;">&lt;I&gt;</span> <span style="background-color: #fdcbcc;">&lt;/I&gt;</span> i have neither head nor arm do not despise but help me</td>
+        <td width="28%" style="text-align: left;">A middle-aged male delivers his speech with a moderately paced rhythm, his tone characterized by a strong monotone. His voice, with a moderate pitch, carries an understated yet deliberate tone, allowing the content of his words to take center stage.</td>
+        <td width="12%" style="text-align: center;"><audio controls="">
+            <source src="static/audio_sample/capspeech-pt-sedb/8288_274162_000014_000002_01.wav"
+              type="audio/wav">
+          </audio></td>
+      </tr>
+      <tr>
+        <td width="28%" style="text-align: left;">	
+          the man from <span style="background-color: #fdcbcc;">&lt;cough&gt;</span> <span style="background-color: #fdcbcc;">&lt;B&gt;</span> the spacer camp <span style="background-color: #fdcbcc;">&lt;/B&gt;</span> was using the stream as his road</td>
+        <td width="28%" style="text-align: left;">In a slightly fast-paced flow, a young woman articulates her thoughts in a subdued, slightly low-pitched tone. Her speech is characterized by a monotone quality, imbuing it with an air of calm and measured deliberation.</td>
+        <td width="12%" style="text-align: center;"><audio controls="">
+            <source src="static/audio_sample/capspeech-pt-sedb/1263_141777_000019_000002_01.wav"
+              type="audio/wav">
+          </audio></td>
+      </tr>
+      <tr>
+        <td width="28%" style="text-align: left;">	
+          jane is now a common grown up with a daughter called margaret and every spring cleaning time except when he forgets peter comes for margaret and takes <span style="background-color: #fdcbcc;">&lt;writing&gt;</span> <span style="background-color: #fdcbcc;">&lt;B&gt;</span> her to the neverland where she tells him stories about himself to which he listens eagerly <span style="background-color: #fdcbcc;">&lt;/B&gt;</span></td>
+        <td width="28%" style="text-align: left;">A middle-aged man delivers his speech with a slightly fast tempo and a slightly high-pitched vocal tone. His tone remains fairly monotone.</td>
+        <td width="12%" style="text-align: center;"><audio controls="">
+            <source src="static/audio_sample/capspeech-pt-sedb/1040_133433_000168_000001_01.wav"
+              type="audio/wav">
+          </audio></td>
+      </tr>
+
+            </tbody>
+        </table>
+      </div>
+              <div class="columns is-centered has-text-centered">
+                <div class="column is-four-fifths">
+                  <a href="#toc" class="button is-primary">Go Back to Table of Contents</a>
+                </div>
+              </div>
+    </div>
   </div>
 </section>
 
