--- a/index.html
+++ b/index.html
@@ -240,13 +240,30 @@
   </div>
 </section>
 
+
 <section id="capspeechdata" class="hero">
   <div class="hero-body">
     <div class="container is-fluid">
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
           <h2 class="title is-3">CapSpeech DataSets</h2>
+          <hr>
+          <div class="box has-background-light">
+            <div class="content is-size-5">
+              🔥 We release all the captions for 
+              <a href="https://huggingface.co/datasets/OpenSound/CapSpeech" 
+                 class="has-text-link has-text-weight-semibold external-link" 
+                 target="_blank" rel="noopener">
+                 <span class="icon">
+                  <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" alt="HF" style="height: 1em; vertical-align: middle;" />
+                </span> CapSpeech
+              </a> 
+              at the Hugging Face Datasets Hub. You can get any subset from the following links:
+            </div>
+          </div>
+          <hr>
         </div>
+        
       </div>
       <div class="columns is-centered has-text-centered">
         <div style="width: 1400px; margin: auto;">
