--- a/index.html
+++ b/index.html
@@ -1007,7 +1007,7 @@
       </tr>
       <tr>
         <td width="28%" style="text-align: left;">Here's the forecast for New York from today to next Tuesday.</td>
-        <td width="28%" style="text-align: left;"> A male speaker whispers at a measured speed. His voice has a high-pitched tone. </td>
+        <td width="28%" style="text-align: left;"> A male speaker whispers at a measured speed. </td>
         <td width="12%" style="text-align: left;"><audio controls="">
             <source src="static/audio_sample/captts/ex03_whisper_00145-ar.wav"
               type="audio/wav">
