--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
           <tbody>
       <tr>
         <td width="28%" style="text-align: left;">	
-          montmorency made up his mind to defend on the whole coast of provence only marseilles <span style="background-color: #fdcbcc;">&lt;knock&gt;</span> <span style="background-color: #fdcbcc;">&lt;I&gt;</span> <span style="background-color: #fdcbcc;">&lt;/I&gt;</span> and arles he pulled down the ramparts of the other towns which were left exposed to the enemy</td>
+          montmorency made up his mind to defend on the whole coast of provence only marseilles <span style="background-color: #fdcbcc;">&lt;door_wood_knock&gt;</span> <span style="background-color: #fdcbcc;">&lt;I&gt;</span> <span style="background-color: #fdcbcc;">&lt;/I&gt;</span> and arles he pulled down the ramparts of the other towns which were left exposed to the enemy</td>
         <td width="28%" style="text-align: left;">A young adult male delivers his speech with a monotone, measured tone, maintaining a consistent rhythm. His moderate pitch, carries a sense of calm assurance.</td>
         <td width="12%" style="text-align: left;"><audio controls="">
             <source src="static/audio_sample/capspeech-pt-sedb/6599_38591_000001_000008_01.wav"
@@ -701,7 +701,7 @@
       </tr>
       <tr>
         <td width="28%" style="text-align: left;">	
-          the man from <span style="background-color: #fdcbcc;">&lt;cough&gt;</span> <span style="background-color: #fdcbcc;">&lt;B&gt;</span> the spacer camp <span style="background-color: #fdcbcc;">&lt;/B&gt;</span> was using the stream as his road</td>
+          the man from <span style="background-color: #fdcbcc;">&lt;coughing&gt;</span> <span style="background-color: #fdcbcc;">&lt;B&gt;</span> the spacer camp <span style="background-color: #fdcbcc;">&lt;/B&gt;</span> was using the stream as his road</td>
         <td width="28%" style="text-align: left;">In a slightly fast-paced flow, a young woman articulates her thoughts in a subdued, slightly low-pitched tone. Her speech is characterized by a monotone quality, imbuing it with an air of calm and measured deliberation.</td>
         <td width="12%" style="text-align: left;"><audio controls="">
             <source src="static/audio_sample/capspeech-pt-sedb/1263_141777_000019_000002_01.wav"
