--- a/index.html
+++ b/index.html
@@ -1323,7 +1323,7 @@
               type="audio/wav">
           </audio></td>
       </tr>
-      <tr>
+      <!-- <tr>
         <td width="28%" style="text-align: left;">But he stressed that the partnership is not a construction company.</td>
         <td width="28%" style="text-align: left;">A teenage girl's <span style="background-color: #b1cdf5;">Irish-accented</span> voice.</td>
         <td width="12%" style="text-align: left;"><audio controls="">
@@ -1334,8 +1334,8 @@
             <source src="static/audio_sample/emo_acc/p266_151-nar.wav"
               type="audio/wav">
           </audio></td>
-      </tr>
-      <tr>
+      </tr> -->
+      <!-- <tr>
         <td width="28%" style="text-align: left;">He said because people had invited him.</td>
         <td width="28%" style="text-align: left;">Her mature and <span style="background-color: #b1cdf5;">South African-accented</span> voice is perfectly suited for client and public interaction roles.</td>
         <td width="12%" style="text-align: left;"><audio controls="">
@@ -1346,8 +1346,8 @@
             <source src="static/audio_sample/emo_acc/p314_092-nar.wav"
               type="audio/wav">
           </audio></td>
-      </tr>
-      <tr>
+      </tr> -->
+      <!-- <tr>
         <td width="28%" style="text-align: left;">They are taking a stand against this.</td>
         <td width="28%" style="text-align: left;">An adult male voice, <span style="background-color: #b1cdf5;">Canadian</span> with a deep, rough quality.</td>
         <td width="12%" style="text-align: left;"><audio controls="">
@@ -1358,7 +1358,7 @@
             <source src="static/audio_sample/emo_acc/p316_396-nar.wav"
               type="audio/wav">
           </audio></td>
-      </tr>
+      </tr> -->
       <tr>
         <td width="28%" style="text-align: left;">Subs not used, McGraw.</td>
         <td width="28%" style="text-align: left;">A mature, <span style="background-color: #b1cdf5;">Australian</span> person voice, deep and rough.</td>
@@ -1458,7 +1458,7 @@
               type="audio/wav">
           </audio></td>
       </tr>
-      <tr>
+      <!-- <tr>
         <td width="28%" style="text-align: left;">Your silence is deafening; it's like a slap you can't deny.</td>
         <td width="28%" style="text-align: left;">The middle-aged speaker, with a slow, slightly animated murmur, carries a <span style="background-color: #f2cbfd;">palpable, unyielding resentment</span>.</td>
         <td width="12%" style="text-align: left;"><audio controls="">
@@ -1469,8 +1469,8 @@
             <source src="static/audio_sample/emo_acc/gpt4o_16808_angry_coral-nar.wav"
               type="audio/wav">
           </audio></td>
-      </tr>
-      <tr>
+      </tr> -->
+      <!-- <tr>
         <td width="28%" style="text-align: left;">Golden sunlight danced over the rippling blue waves, painting everything in shades of joy.</td>
         <td width="28%" style="text-align: left;">A middle-aged man, speaking with a moderate pitch and slightly slow rate, delivers his words with a <span style="background-color: #f2cbfd;">warm, animated enthusiasm</span>.</td>
         <td width="12%" style="text-align: left;"><audio controls="">
@@ -1481,8 +1481,8 @@
             <source src="static/audio_sample/emo_acc/gpt4o_8360_happy_verse-nar.wav"
               type="audio/wav">
           </audio></td>
-      </tr>
-      <tr>
+      </tr> -->
+      <!-- <tr>
         <td width="28%" style="text-align: left;">Dust settles on framed photographs, shadowing faces of forgotten smiles.</td>
         <td width="28%" style="text-align: left;">His low, slow, and melancholic voice carries a heavy-hearted tone, each word echoing with <span style="background-color: #f2cbfd;">a sense of sorrow</span>.</td>
         <td width="12%" style="text-align: left;"><audio controls="">
@@ -1493,19 +1493,7 @@
             <source src="static/audio_sample/emo_acc/gpt4o_18708_sad_verse-nar.wav"
               type="audio/wav">
           </audio></td>
-      </tr>
-      <tr>
-        <td width="28%" style="text-align: left;">The cat, usually aloof, suddenly curled up in his lap, purring contentedly.</td>
-        <td width="28%" style="text-align: left;">A middle-aged man, speaking with a slightly high-pitched, slow, and slightly expressive tone, conveying <span style="background-color: #f2cbfd;">surprise with a gentle, bemused warmth</span>.</td>
-        <td width="12%" style="text-align: left;"><audio controls="">
-            <source src="static/audio_sample/emo_acc/gpt4o_19885_surprised_verse-ar.wav"
-              type="audio/wav">
-          </audio></td>
-          <td width="12%" style="text-align: left;"><audio controls="">
-            <source src="static/audio_sample/emo_acc/gpt4o_19885_surprised_verse-nar.wav"
-              type="audio/wav">
-          </audio></td>
-      </tr>
+      </tr> -->
       <tr>
         <td width="28%" style="text-align: left;">Why does your car smell like a dead RAT? It's absolutely vile.</td>
         <td width="28%" style="text-align: left;">A middle-aged woman speaks in a low, monotone voice, her words dripping with <span style="background-color: #f2cbfd;">disgust and annoyance</span>.</td>
@@ -1515,6 +1503,18 @@
           </audio></td>
           <td width="12%" style="text-align: left;"><audio controls="">
             <source src="static/audio_sample/emo_acc/gpt4o_22272_disgusted_sage-nar.wav"
+              type="audio/wav">
+          </audio></td>
+      </tr>
+      <tr>
+        <td width="28%" style="text-align: left;">The cat, usually aloof, suddenly curled up in his lap, purring contentedly.</td>
+        <td width="28%" style="text-align: left;">A male speaker, speaking with a slightly high-pitched, slow, and slightly expressive tone, conveying <span style="background-color: #f2cbfd;">surprise with a gentle, bemused warmth</span>.</td>
+        <td width="12%" style="text-align: left;"><audio controls="">
+            <source src="static/audio_sample/emo_acc/gpt4o_19885_surprised_verse-ar.wav"
+              type="audio/wav">
+          </audio></td>
+          <td width="12%" style="text-align: left;"><audio controls="">
+            <source src="static/audio_sample/emo_acc/gpt4o_19885_surprised_verse-nar.wav"
               type="audio/wav">
           </audio></td>
       </tr>
