--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
             <span class="author-block">* Indicates equal contribution</span>
           </div>
 
-          <div class="is-size-5 publication-authors">
+<!--           <div class="is-size-5 publication-authors">
             <span class="author-block">Submission to NeurIPS 2025</span>
-          </div>
+          </div> -->
 
           <!-- <div class="column has-text-centered">
             <div class="publication-links">
