--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <span class="author-block">Submission to NeurIPS 2025</span>
           </div> -->
 
-          <!-- <div class="column has-text-centered">
+          <div class="column has-text-centered">
             <div class="publication-links">
               <span class="link-block">
                 <a href="https://arxiv.org/"
@@ -109,25 +109,25 @@
                   </span>
                   <span>Paper</span>
                 </a>
-                <a href="https://github.com/WangHelin1997/CapSpeech" class="external-link button is-normal is-rounded is-dark">
+                <a href="https://huggingface.co/datasets/OpenSound/CapSpeech/" class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="fas fa-database"></i>
                   </span>
                   <span>Data</span>
                 </a>             
-                <a href="https://github.com/WangHelin1997/CapSpeech" class="external-link button is-normal is-rounded is-dark">
+                <a href="https://github.com/WangHelin1997/CapSpeech/" class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="fab fa-github"></i>
                   </span>
                   <span>Code</span>
                 </a>
-                <a href="https://huggingface.co/OpenSound/" class="external-link button is-normal is-rounded is-dark">
+                <a href="https://huggingface.co/OpenSound/CapSpeech-models/" class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" alt="HF" style="height: 1em; vertical-align: middle;" />
                   </span>
                   <span>Model</span>
                 </a>
-                <a href="https://huggingface.co/spaces/OpenSound/" class="external-link button is-normal is-rounded is-dark">
+                <a href="https://huggingface.co/spaces/OpenSound/CapSpeech/" class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="fas fa-rocket"></i>
                   </span>
@@ -135,7 +135,7 @@
                 </a>                
               </span>
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
     </div>
