--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                   <span class="icon">
                     <i class="fas fa-rocket"></i>
                   </span>
-                  <span>Demo</span>
+                  <span>Spaces</span>
                 </a>                
               </span>
             </div>
