--- a/index.html
+++ b/index.html
@@ -265,15 +265,19 @@
           
           <div class="box has-background-light">
             <div class="content is-size-5">
-              🔥 We release all the captions for 
+              🔥We release all the captions for 
               <a href="https://huggingface.co/datasets/OpenSound/CapSpeech" 
                  class="has-text-link has-text-weight-semibold external-link" 
                  target="_blank" rel="noopener">
-                 <span class="icon">
+                 <!-- <span class="icon">
                   <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" alt="HF" style="height: 1em; vertical-align: middle;" />
-                </span> CapSpeech
+                </span> -->
+                🧢CapSpeech
               </a> 
-              at the Hugging Face Datasets Hub. <br> You can get any subset from the following links:
+              at the 🤗Hugging Face Datasets Hub. <br> You can access any subset from the links below.<br>
+              <p style="font-size: 0.75em; color: #666;">
+              Links shown in darker buttons represent new captions or recordings recently released by us.
+              </p>            
             </div>
           </div>
           <hr>
@@ -321,6 +325,12 @@
               </span>
               <span>Emilia-EN</span>
             </a>
+            <a href="https://openslr.org/94/" class="external-link button is-normal is-rounded is-light">
+              <span class="icon">
+                <i class="fas fa-database"></i>
+              </span>
+              <span>MLS-EN</span>
+            </a>    
             <a href="https://huggingface.co/datasets/speechcolab/gigaspeech" class="external-link button is-normal is-rounded is-light">
               <span class="icon">
                 <i class="fas fa-database"></i>
@@ -333,12 +343,6 @@
               </span>
               <span>CommonVoice-EN</span>
             </a> 
-            <a href="https://openslr.org/94/" class="external-link button is-normal is-rounded is-light">
-              <span class="icon">
-                <i class="fas fa-database"></i>
-              </span>
-              <span>MLS-EN</span>
-            </a>                
           </td>
           <td width="28%" style="text-align: left;">
             <a href="https://huggingface.co/datasets/OpenSound/CapSpeech-PT" class="external-link button is-normal is-rounded is-dark">
@@ -405,6 +409,12 @@
               </span>
               <span>LibriTTS-R</span>
             </a>
+            <a href="https://datashare.ed.ac.uk/handle/10283/2950" class="external-link button is-normal is-rounded is-light">
+              <span class="icon">
+                <i class="fas fa-database"></i>
+              </span>
+              <span>VCTK</span>
+            </a>   
             <a href="https://www.robots.ox.ac.uk/~vgg/data/voxceleb/" class="external-link button is-normal is-rounded is-light">
               <span class="icon">
                 <i class="fas fa-database"></i>
@@ -428,13 +438,7 @@
                 <i class="fas fa-database"></i>
               </span>
               <span>Expresso</span>
-            </a>  
-            <a href="https://datashare.ed.ac.uk/handle/10283/2950" class="external-link button is-normal is-rounded is-light">
-              <span class="icon">
-                <i class="fas fa-database"></i>
-              </span>
-              <span>VCTK</span>
-            </a>            
+            </a>           
           </td>
           <td width="28%" style="text-align: left;">
             <a href="https://huggingface.co/datasets/OpenSound/CapTTS-SFT" class="external-link button is-normal is-rounded is-dark">
