--- a/index.html
+++ b/index.html
@@ -152,8 +152,7 @@
   </div>
 </section>
 
-
-<section id="video-demo" class="section">
+<!-- <section id="video-demo" class="section"> -->
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
@@ -164,7 +163,7 @@
       </div>
     </div>
   </div>
-</section>
+<!-- </section> -->
 
 
 <section id="abs" class="section" style="padding-top: 0px;">
