--- a/index.html
+++ b/index.html
@@ -133,15 +133,17 @@
                 </a>
                 <a href="https://huggingface.co/OpenSound/CapSpeech-models/" class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
-                    <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" alt="HF" style="height: 1em; vertical-align: middle;" />
+                    <i class="fas fa-cubes"></i>
+                    <!-- <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" alt="HF" style="height: 1em; vertical-align: middle;" /> -->
                   </span>
                   <span>Model</span>
                 </a>
                 <a href="https://huggingface.co/spaces/OpenSound/CapSpeech/" class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
-                    <i class="fas fa-rocket"></i>
+                    <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" alt="HF" style="height: 1em; vertical-align: middle;" />
+                    <!-- <i class="fas fa-rocket"></i> -->
                   </span>
-                  <span>Spaces</span>
+                  <span>Demo</span>
                 </a>                
               </span>
             </div>
