--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     </div>
   </section> -->
 
-<section id="toc" class="section" style="padding-top: 0px;">
+<!-- <section id="toc" class="section" style="padding-top: 0px;"> -->
   <div class="container  is-fluid">
     <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
@@ -216,17 +216,20 @@
         <h2 class="title is-3">Table of Contents</h2>
         <div class="is-centered">
           <ul>
-            <li><a href="#overview"><b>CapSpeech Overview</b></a></li>
-            <li><a href="#capspeechdata"><b>CapSpeech DataSets</b></a></li>
-            <li><a href="#capspeechpt"><b>CapSpeech-PT DataSet</b></a></li>
-            <li><a href="#capspeechptsedb"><b>CapSpeech-PT-SEDB DataSet</b></a></li>
-            <li><a href="#agentdb"><b>CapSpeech-AgentDB DataSet</b></a></li>
-            <li><a href="#capttssedb"><b>CapSpeech-SEDB DataSet</b></a></li>
-            <li><a href="#captts"><b>CapTTS Results</b></a></li>
-            <li><a href="#capttsse"><b>CapTTS-SE Results</b></a></li>
-            <li><a href="#acccaptts"><b>AccCapTTS Results</b></a></li>
-            <li><a href="#emocaptts"><b>EmoCapTTS Results</b></a></li>
-            <li><a href="#agenttts"><b>AgentTTS Results</b></a></li>
+          <li><a href="#overview" style="font-size: 1.5em;"><b>Overview</b></a></li>
+          <li class="divider"></li>
+          <li><a href="#capspeechdata" style="font-size: 1.5em;"><b>DataSets</b></a></li>
+          <li><a href="#capspeechpt"><b>CapSpeech-PT</b></a></li>
+          <li><a href="#capspeechptsedb"><b>CapSpeech-PT-SEDB</b></a></li>
+          <li><a href="#agentdb"><b>CapSpeech-AgentDB</b></a></li>
+          <li><a href="#capttssedb"><b>CapSpeech-SEDB</b></a></li>
+          <li class="divider"></li>
+          <li><a href="#captts" style="font-size: 1.5em;"><b>Results</b></a></li>
+          <li><a href="#captts"><b>CapTTS</b></a></li>
+          <li><a href="#capttsse"><b>CapTTS-SE</b></a></li>
+          <li><a href="#acccaptts"><b>AccCapTTS</b></a></li>
+          <li><a href="#emocaptts"><b>EmoCapTTS</b></a></li>
+          <li><a href="#agenttts"><b>AgentTTS</b></a></li>
           </ul>
         </div>
 
@@ -234,14 +237,14 @@
     </div>
 
   </div>
-</section>
+<!-- </section> -->
 
 <section id="overview" class="hero">
   <div class="hero-body">
     <div class="container is-fluid">
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
-          <h2 class="title is-3">CapSpeech Overview</h2>
+          <h2 class="title is-3">Overview</h2>
         </div>
       </div>
       <div class="columns is-centered has-text-centered">
